style.css
/* header and nav*/
html, body {
  margin: 0;
  padding: 0;
}

header {
  display: flex;
  align-items: center;
  position: fixed;
  z-index: 1;
  width: 100%;
  height: 80px;
  background-color: white;
  font-family: Verdana;
  font-size: 14px;
  font-weight: bold;
}

a {
  color: black;
}

header nav {
  display: flex;
  align-items: flex-end;
  padding-right: 40px;
}

.logo {
  display: flex;
  align-items: center;
  flex-grow: 1;
  padding-left: 30px;
}

.logo img {
  padding-right: 30px;
}

.logotext {
  color: MediumAquamarine;
}

nav span {
  display: flex;
  align-items: flex-end;
  padding-left: 30px;
  color: black;
}

/*all content boarders*/

/* cblack boarders for all div containers
div {
    border: 1px solid black;
}
*/

.cameraimage {
  display: flex;
  margin-top: 15px;
  height: 300px;
  text-align: center;
  background-image: url(./images/img-story-3.png);
}

h1 {
font-family: Georgia;
font-weight: bold;
font-size: 30px;
color: white;
}

/* article sections*/
.story {
  display: flex;
  flex-direction: column;
  width: 300px;
}

.stories {
  display: flex;
  justify-content: space-between;
  margin-top: 17px;
}

.content {
  display: flex;
  z-index: 1;
  padding-top: 80px;
  display: flex;
  width: 1232px;
  margin: 0 auto 78px auto;
}

.image-content {
  display: flex;
  flex-wrap: wrap;
  height: 250px;
  background-image: url(./images/img-story-main.png);
  width: 630px;
  font-family: Georgia;
  font-size: 14px;
  font-weight: bold;
  color: white;
}

.image-content span {
  margin-left: 20px;
}

h3 {
  display: flex;
  justify-content: center;
}

.first-column .large {
  width: 630px;
  margin-right: 32px;
}

.lead-story .image-content {
  font-size: 40px;
  align-items: center;
}

.earthimage {
  display: flex;
  margin-top: 15px;
  height: 300px;
  text-align: center;
  background-image: url(./images/img-story-2.png);
}

.whiteheaders {
  display: flex;
  margin-top: 15px;
  height: 300px;
  text-align: center;
  background-image: url(./images/img-story-1.png);
}

.second-column .medium {
  width: 300px;
  margin-right: 32px;
}

.third-column .small {
  width: 240px;
  margin-right: 32px;
}

.bite {
  display: block;
  padding: 11px 20px;
  border-bottom: 1px solid black;
  background-color: whitesmoke;
  font-family: Verdana;
  font-size: 12px;
  color: dimgray;
}

.cat-header {
  background-image: url(./images/img-story-1.png);
}


/* footer*/

footer {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 325px;
  position: fixed;
  z-index: 1;
  background-color: MediumAquamarine;
  color: white;
  font-family: Verdana;
  font-size: 12px;
  padding: 30px 0;
  bottom: 0px;
}

.footermenu {
  display: flex;
  flex-direction: row;
}

footer .title {
  display: inline-block;
  padding-right: 24px;
  border-right: 2px solid white;
  font-family: Georgia;
  font-size: 16px;
  font-weight: bold;
}

